src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>MSL Booking Process</fullName>
        <description>Sales process for Bookings synced from MSL to SFDC</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SFDC Booking Process</fullName>
        <description>Sales process for Booking emails received from SFDC</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Ad_Number__c</fullName>
        <description>Booking Reference Number</description>
        <externalId>true</externalId>
        <label>Ad Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Agency_Account_Number__c</fullName>
        <label>Agency Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Phone_Number__c</fullName>
        <label>Agency Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agency_Post_Code__c</fullName>
        <label>Agency Post Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Agency)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Awaiting_Upsell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Upsell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Bill To)</relationshipLabel>
        <relationshipName>BillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Account_Number__c</fullName>
        <label>Client Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Postcode__c</fullName>
        <label>Client Postcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copied__c</fullName>
        <label>Copied</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Creator__c</fullName>
        <label>Creator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Salesperson__c</fullName>
        <formula>IF(Sales_Rep__r.Id =  $User.Id, TRUE,
IF(ISBLANK(Sales_Rep__r.Id), FALSE,
IF(ISNULL(Sales_Rep__r.Id), FALSE,
FALSE)))</formula>
        <label>Am I the Current Salesperson?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time_No_Bus_Hrs__c</fullName>
        <description>Time elapsed since the email was received (in minutes).</description>
        <formula>(now()- Created_Date_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time elapsed since the email was received (in minutes), but business hours are not taken into account.</inlineHelpText>
        <label>Elapsed Time (Min)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time__c</fullName>
        <formula>ROUND((ROUND (8 * (
   ( 5 * FLOOR( ( DATEVALUE( NOW() ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, MOD( DATEVALUE( NOW() ) - DATE( 1900, 1, 8), 7) +
    MIN( 1, 24 / 8 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( Created_Date_Time__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5, MOD( DATEVALUE( Created_Date_Time__c ) - DATE( 1900, 1, 8), 7 ) +
      MIN( 1, 24 / 8 * ( MOD(  Created_Date_Time__c - DATETIMEVALUE( &apos;1900-01-08 09:00:00&apos; ), 1) ) )
    )
   )
   ),
  2))*60, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time elapsed in minutes since the email was received, which takes into account business hours (Mon to Fri, 9 - 5).</inlineHelpText>
        <label>Elapsed Time (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unread</fullName>
                <color>#666666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Booking</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Account on Stop</fullName>
                <color>#CC0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#000000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Query</fullName>
                <color>#66CCCC</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <formula>IF(ISPICKVAL(Email_Status__c, &quot;Unread&quot;), IMAGE(&quot;/resource/1417620259000/Flag7_TBD&quot;, &quot;7 - TBD&quot;, 18, 18), 

IF(ISPICKVAL(Email_Status__c, &quot;Account on Stop&quot;), IMAGE(&quot;/resource/1417620273000/Flag8_OnStop&quot;, &quot;8 - Account on Stop&quot;, 18, 18), 

IF(NOT(ISBLANK(Ad_Number__c)), IMAGE(&quot;/resource/1417620289000/Flag9_Booked&quot;, &quot;9 - Booked&quot;, 18, 18), 

IF(Elapsed_Time_No_Bus_Hrs__c &gt; 480, IMAGE(&quot;/resource/1417619901000/Flag1_8Hrs&quot;, &quot;1 - Very High (+8 Hrs)&quot;, 18, 18),

IF(AND(Elapsed_Time_No_Bus_Hrs__c &gt; 240, Elapsed_Time_No_Bus_Hrs__c &lt;= 480), IMAGE(&quot;/resource/1417620124000/Flag2_4Hrs&quot;, &quot;2 - Very High (+4 Hrs)&quot;, 18, 18),

IF(AND(Elapsed_Time_No_Bus_Hrs__c &gt; 120, Elapsed_Time_No_Bus_Hrs__c &lt;= 240), IMAGE(&quot;/resource/1417620189000/Flag3_2Hrs&quot;, &quot;3 - High (+2 Hrs)&quot;, 18, 18),

IF(OR(CONTAINS(Folder__r.Name, &quot;Gold&quot;), 
CONTAINS(Folder__r.Name, &quot;Silver&quot;), 
CONTAINS(Folder__r.Name, &quot;Leadership/FE&quot;) 
), 
   IMAGE(&quot;/resource/1417620208000/Flag4_High&quot;, &quot;4 - High&quot;, 18, 18),

IF(OR(ISPICKVAL(Online_Job_Type__c, &quot;Gold&quot;), 
ISPICKVAL(Online_Job_Type__c, &quot;Silver&quot;) 
), 
IMAGE(&quot;/resource/1417620208000/Flag4_High&quot;, &quot;4 - High&quot;, 18, 18),

IF(AND(Elapsed_Time_No_Bus_Hrs__c &lt;= 120, Elapsed_Time_No_Bus_Hrs__c &gt; 60), IMAGE(&quot;/resource/1417620223000/Flag5_Medium&quot;, &quot;5 - Medium (1-2 Hrs)&quot;, 18, 18),

IF(Elapsed_Time_No_Bus_Hrs__c &lt;=60, IMAGE(&quot;/resource/1417620239000/Flag6_Low&quot;, &quot;6 - Low (&lt;1 Hr)&quot;, 18, 18), 

IMAGE(&quot;/resource/1417620259000/Flag7_TBD&quot;, &quot;7 - TBD&quot;, 18, 18)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Flag color corresponding to each Priority.</inlineHelpText>
        <label>Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Picklist__c</fullName>
        <label>Folder</label>
        <picklist>
            <controllingField>Mailbox_Picklist__c</controllingField>
            <picklistValues>
                <fullName>1. Gold - Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Gold - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Leadership/FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Leadership/FE - Space Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Leadership/FE - Mac Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Mac Ads A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Silver - Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Silver - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Bronze and Starter - Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Bronze and Starter - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Mac Ads B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Space Bookings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Account on Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Mac Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Mac Logos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Account on Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Amendments - Leadership/FE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Amendments - Leadership/FE - Mac Ads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Manchester Primary +</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Amendments - Mac Ads - Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Amendments - Mac Ads - Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Awaiting PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Sent to Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Space Bookings - DONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Future Adverts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Mac Ads - DONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Amendments - DONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Downsells</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HD_Est_Postcode__c</fullName>
        <label>HD Est Postcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Est__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HD Est</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (HD Est)</relationshipLabel>
        <relationshipName>HD_Establishments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leadership_FE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For print ads only. Tick if the booking has a print advert for Leadership/FE publication.</description>
        <inlineHelpText>For print ads only. Tick if the booking has a print advert for Leadership/FE publication.</inlineHelpText>
        <label>Leadership/FE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ln__c</fullName>
        <label>Ln</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mac_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mac User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailbox_Picklist__c</fullName>
        <label>Mailbox</label>
        <picklist>
            <picklistValues>
                <fullName>Agency - Online Only</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Agency - Print Ads</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Web Amends</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Artwork</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Direct - Online Only</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Direct - Recruitment</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Web Amends</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Hirewire TES</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Online School Groups</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Plus</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>TES Australia</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>TES International</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>TES Internet Jobs</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>TES Support</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>TES Wales</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>THE Artwork</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>THE Recruitment</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>THE Support</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>THE Web Amends</fullName>
                <color>#A845DC</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mailbox</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>ParentBookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Chatter_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Job_Type__c</fullName>
        <description>For online ads only. The highest job type for an online booking.</description>
        <inlineHelpText>For online ads only. The highest job type for an online booking.</inlineHelpText>
        <label>Online Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter Addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_By_Email__c</fullName>
        <description>Email of the person who sent the booking email.</description>
        <label>Order By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Order_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>&quot;Email Sender&quot; defined in contact roles, i.e. the contact who sent the booking email.</description>
        <label>Order By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>PO Number</description>
        <label>Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <label>Package Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Price__c</fullName>
        <label>Package Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF(ISPICKVAL(Email_Status__c, &quot;Unread&quot;), &quot;TBD&quot;, 

IF(ISPICKVAL(Email_Status__c, &quot;Account on Stop&quot;), &quot;Account on Stop&quot;,

IF(NOT(ISBLANK(Ad_Number__c)), &quot;Booked&quot;, 

IF(Elapsed_Time_No_Bus_Hrs__c &gt; 480, &quot;Very High (+8 Hrs)&quot;,

IF(AND(Elapsed_Time_No_Bus_Hrs__c &gt; 240, Elapsed_Time_No_Bus_Hrs__c &lt;= 480), &quot;Very High (+4 Hrs)&quot;, 

IF(AND(Elapsed_Time_No_Bus_Hrs__c &gt; 120, Elapsed_Time_No_Bus_Hrs__c &lt; 240), &quot;High (+2 Hrs)&quot;,

IF(OR(CONTAINS(Folder__r.Name, &quot;Gold&quot;), 
CONTAINS(Folder__r.Name, &quot;Silver&quot;), 
CONTAINS(Folder__r.Name, &quot;Leadership/FE&quot;) 
), 
&quot;High (Gold/Silver/Leadership/FE)&quot;, 

IF(OR(ISPICKVAL(Online_Job_Type__c, &quot;Gold&quot;), 
ISPICKVAL(Online_Job_Type__c, &quot;Silver&quot;)
), 
&quot;High (Gold/Silver/Leadership/FE)&quot;, 

IF(AND(Elapsed_Time_No_Bus_Hrs__c &lt;= 120, Elapsed_Time_No_Bus_Hrs__c &gt; 60), &quot;Medium (1-2 Hrs)&quot;, 

IF(Elapsed_Time_No_Bus_Hrs__c &lt;=60, &quot;Low (&lt;1 Hr)&quot;, 

&quot;TBD&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Sub__c</fullName>
        <label>Prod Sub</label>
        <picklist>
            <controllingField>Prod_Type__c</controllingField>
            <picklistValues>
                <fullName>1 CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 CP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WK2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prod_Type__c</fullName>
        <label>Prod Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac Make-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac Proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quick Cut</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Production_Notes__c</fullName>
        <label>Production Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <label>Promo</label>
        <picklist>
            <picklistValues>
                <fullName>Run til Fill 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run til Fill 100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10% Colour &amp; Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15% Colour, Gold &amp;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Schools 10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Schools 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15% Colour &amp; Gold In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.5% Colour &amp; Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10% Leadership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proof_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Australia Free Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Ad - Upsold to Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Ad - Now Online Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Ad - TSL Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Ad - Customer Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Ad - TSL Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled Ad - Customer Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Ad - Production Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTF 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Ad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Linage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Primary*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TES Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THE Professional Support Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sns ad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resolution_Time_Min__c</fullName>
        <inlineHelpText>Time since the email was received until it is booked in the system, which takes into account business hours (Mon - Fri, 9-5).</inlineHelpText>
        <label>Resolution Time (Min)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SD_Est_Post_Code__c</fullName>
        <label>SD Est Post Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Est__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SD Est</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (SD Est)</relationshipLabel>
        <relationshipName>SD_Ests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNS__c</fullName>
        <label>SNS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BookingsSales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Establishment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Establishment</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (School Establishment)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Space_Booking_or_Mac_Ad__c</fullName>
        <description>For print ads only. A &quot;space booking&quot; is a booking that has a ready-made PDF. A &quot;Mac ad&quot; is a booking that is copy only and needs an artwork to be produced by the Mac team.</description>
        <inlineHelpText>For print ads only. A &quot;space booking&quot; is a booking that has a ready-made PDF. A &quot;Mac ad&quot; is a booking that is copy only and needs an artwork to be produced by the Mac team.</inlineHelpText>
        <label>Space Booking or Mac Ad?</label>
        <picklist>
            <picklistValues>
                <fullName>Space Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac Ad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>Style</label>
        <picklist>
            <picklistValues>
                <fullName>tesinput</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NOT TO PACKAGE. Only for unit test</description>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Account_on_Stop</fullName>
        <columns>Flag__c</columns>
        <columns>Replied__c</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Mailbox_Picklist__c</columns>
        <columns>Folder_Picklist__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Ad_Number__c</columns>
        <columns>Sales_Rep__c</columns>
        <columns>Created_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Status__c</field>
            <operation>equals</operation>
            <value>Account on Stop</value>
        </filters>
        <filters>
            <field>Delete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Direct_Booking</value>
        </filters>
        <label>6: Account on Stop</label>
        <sharedTo>
            <group>Booking_Team</group>
            <group>Direct_Sales_Team</group>
        </sharedTo>
    </listViews>
</CustomObject>